--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "1.3.1",
+    "@vercel/speed-insights": "^1.3.1",
     "lucide-react": "^0.454.0",
     "next": "16.0.10",
     "react": "19.2.0",
